k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: acrcampusconnect5300d4.azurecr.io/worker:latest

          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
